# Mediauto

./: Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
cl-monitor/: clmonitor-raw.py  clmonitor.py
etc/: Makefile.am  Makefile.in  mediauto.conf.in
etc/dbus-1/: Makefile.am  Makefile.in
etc/dbus-1/system.d/: Makefile.am  Makefile.in  mediauto.conf
gnome-monitor/: Makefile.am  Makefile.in  main.c
m4/: mediauto.m4
modules/: Makefile.am  Makefile.in  dvd.py
src/: Makefile.am  Makefile.in  daemon.py
